# multi-agent-dev-ops

./: .gitignore  README.md  pyproject.toml  requirements.txt  scenario1_deploy.py  scenario2_diagnosis.py  scenario3_optimization.py  scenario4_monitoring.py  scenario_dev_complete.py
devops_crew/: __init__.py  crew.py  main.py
devops_crew/agents/: __init__.py  dev_agents.py
devops_crew/config/: agents.yaml  tasks.yaml
devops_crew/core/: __init__.py  agent_base.py  orchestrator.py
devops_crew/tools/: __init__.py  docker_tools.py  git_tools.py  kubernetes_tools.py  log_tools.py  monitor_tools.py
docs/: agents_design.md  architecture.md  scenarios.md  web_interface.md
my_first_crew/: error.txt  pyproject.toml  report.md
my_first_crew/src/my_first_crew/: crew.py  main.py
my_first_crew/src/my_first_crew/config/: agents.yaml  tasks.yaml
tests/: test_tools.py
web_interface/: __init__.py  app.py
web_interface/static/css/: dashboard.css  style.css
web_interface/static/js/: dashboard.js  logs.js  main.js  scenarios.js
web_interface/templates/: base.html  history.html  index.html  logs.html  scenarios.html  settings.html  software_dev_index.html
