[project]
name = "multi-agent-devops"
version = "1.0.0"
description = "多智能体协同软件运维系统 - 武汉大学本科毕业设计"
authors = [{ name = "WhoAmI-adc", email = "student@whu.edu.cn" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "MIT" }
keywords = ["crewai", "devops", "multi-agent", "ai", "automation"]

dependencies = [
    "crewai[tools]>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
devops-crew = "devops_crew.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devops_crew"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
